[KIECLOUD-121] Add KIE_SERVER_MODE default values
Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>

--- a/config/common.yaml
+++ b/config/common.yaml
@@ -486,6 +486,8 @@ servers:
                       value: "[[$.ApplicationName]]-[[$.Console.Name]]"
                     - name: KIE_SERVER_CONTROLLER_PROTOCOL
                       value: ws
+                    - name: KIE_SERVER_MODE
+                      value: DEVELOPMENT
                     - name: KIE_MBEANS
                       value: enabled
                     - name: KIE_SERVER_HOST
