--- a/config/envs/rhdm-trial.yaml
+++ b/config/envs/rhdm-trial.yaml
@@ -54,17 +54,17 @@ servers:
   - deploymentConfigs:
       ## KIE server deployment config BEGIN
       - metadata:
-          name: "[[.KieName]][[.KieIndex]]"
+          name: "[[.KieName]]"
         spec:
           template:
             metadata:
-              name: "[[.KieName]][[.KieIndex]]"
+              name: "[[.KieName]]"
             spec:
               containers:
-                - name: "[[.KieName]][[.KieIndex]]"
+                - name: "[[.KieName]]"
                   env:
                     - name: KIE_SERVER_ROUTE_NAME
-                      value: "[[.KieName]][[.KieIndex]]-http"
+                      value: "[[.KieName]]-http"
                     - name: KIE_SERVER_PROTOCOL
                     - name: KIE_SERVER_PORT
                     - name: FILTERS
@@ -92,19 +92,19 @@ servers:
     ## KIE server deployment config END
     ## KIE server route BEGIN
     routes:
-      - id: "[[.KieName]][[.KieIndex]]-http"
+      - id: "[[.KieName]]-http"
         metadata:
-          name: "[[.KieName]][[.KieIndex]]-http"
+          name: "[[.KieName]]-http"
           labels:
             app: "[[$.ApplicationName]]"
             application: "[[$.ApplicationName]]"
-            service: "[[.KieName]][[.KieIndex]]"
+            service: "[[.KieName]]"
           annotations:
             description: Route for KIE server's http service.
             haproxy.router.openshift.io/timeout: 60s
         spec:
           to:
-            name: "[[.KieName]][[.KieIndex]]"
+            name: "[[.KieName]]"
           port:
             targetPort: http
     ## KIE server route END
