--- a/config/envs/rhpam-authoring-ha.yaml
+++ b/config/envs/rhpam-authoring-ha.yaml
@@ -56,21 +56,9 @@ console:
 smartRouter:
   omit: true
 ## KIE smartrouter END
-# MySQL/ES/AMQ BEGIN
+# ES/AMQ BEGIN
 others:
   - persistentVolumeClaims:
-      - metadata:
-          name: "[[.ApplicationName]]-mysql-claim"
-          labels:
-            app: "[[.ApplicationName]]"
-            application: "[[.ApplicationName]]"
-        spec:
-          accessModes:
-            - ReadWriteOnce
-          resources:
-            requests:
-              storage: "1Gi"
-
       - metadata:
           name: "[[.ApplicationName]]-[[.Product]]index-claim"
           labels:
@@ -145,74 +133,6 @@ others:
                 - name: "[[.ApplicationName]]-[[.Product]]index-pvol"
                   persistentVolumeClaim:
                     claimName: "[[.ApplicationName]]-[[.Product]]index-claim"
-
-      - metadata:
-          name: "[[.ApplicationName]]-mysql"
-          labels:
-            app: "[[.ApplicationName]]"
-            application: "[[.ApplicationName]]"
-        spec:
-          strategy:
-            type: Recreate
-          triggers:
-            - type: ImageChange
-              imageChangeParams:
-                automatic: true
-                containerNames:
-                  - "[[.ApplicationName]]-mysql"
-                from:
-                  kind: ImageStreamTag
-                  namespace: "openshift"
-                  name: "mysql:5.7"
-            - type: ConfigChange
-          replicas: 1
-          selector:
-            deploymentConfig: "[[.ApplicationName]]-mysql"
-          template:
-            metadata:
-              name: "[[.ApplicationName]]-mysql"
-              labels:
-                deploymentConfig: "[[.ApplicationName]]-mysql"
-                app: "[[.ApplicationName]]"
-                application: "[[.ApplicationName]]"
-            spec:
-              terminationGracePeriodSeconds: 60
-              containers:
-                - name: "[[.ApplicationName]]-mysql"
-                  image: mysql
-                  imagePullPolicy: Always
-                  livenessProbe:
-                    tcpSocket:
-                      port: 3306
-                    initialDelaySeconds: 30
-                    timeoutSeconds: 1
-                  readinessProbe:
-                    exec:
-                      command:
-                        - "/bin/sh"
-                        - "-i"
-                        - "-c"
-                        - "MYSQL_PWD=$MYSQL_PASSWORD mysql -h 127.0.0.1 -u $MYSQL_USER -D $MYSQL_DATABASE -e 'SELECT 1'"
-                      port: 3306
-                    initialDelaySeconds: 5
-                    timeoutSeconds: 1
-                  ports:
-                    - containerPort: 3306
-                      protocol: TCP
-                  volumeMounts:
-                    - mountPath: "/var/lib/mysql/data"
-                      name: "[[.ApplicationName]]-mysql-pvol"
-                  env:
-                    - name: MYSQL_USER
-                      value: "rhpam"
-                    - name: MYSQL_PASSWORD
-                      value: "[[.AdminPassword]]"
-                    - name: MYSQL_DATABASE
-                      value: "rhpam7"
-              volumes:
-                - name: "[[.ApplicationName]]-mysql-pvol"
-                  persistentVolumeClaim:
-                    claimName: "[[.ApplicationName]]-mysql-claim"
 
       - metadata:
           labels:
@@ -310,21 +230,6 @@ others:
 
       - spec:
           ports:
-            - port: 3306
-              targetPort: 3306
-          selector:
-            deploymentConfig: "[[.ApplicationName]]-mysql"
-        metadata:
-          name: "[[.ApplicationName]]-mysql"
-          labels:
-            app: "[[.ApplicationName]]"
-            application: "[[.ApplicationName]]"
-            service: "[[.ApplicationName]]-mysql"
-          annotations:
-            description: The MySQL server's port.
-
-      - spec:
-          ports:
             - name: rest
               port: 9200
               targetPort: 9200
@@ -358,51 +263,5 @@ others:
           port:
             targetPort: rest
 
-## MySQL/ES/AMQ END
+## ES/AMQ END
 
-## KIE Servers BEGIN
-servers:
-  ## RANGE BEGINS
-  #[[ range $index, $Map := .Servers ]]
-  ## KIE server deployment config BEGIN
-  - deploymentConfigs:
-      - metadata:
-          name: "[[.KieName]][[.KieIndex]]"
-        spec:
-          template:
-            metadata:
-              name: "[[.KieName]][[.KieIndex]]"
-            spec:
-              containers:
-                - name: "[[.KieName]][[.KieIndex]]"
-                  env:
-                    - name: DATASOURCES
-                      value: "RHPAM"
-                    - name: RHPAM_DATABASE
-                      value: "rhpam7"
-                    - name: RHPAM_JNDI
-                      value: "java:/jboss/datasources/rhpam"
-                    - name: RHPAM_JTA
-                      value: "true"
-                    - name: KIE_SERVER_PERSISTENCE_DS
-                      value: "java:/jboss/datasources/rhpam"
-                    ## MySQL driver settings BEGIN
-                    - name: RHPAM_DRIVER
-                      value: "mysql"
-                    - name: KIE_SERVER_PERSISTENCE_DIALECT
-                      value: "org.hibernate.dialect.MySQL57Dialect"
-                    - name: RHPAM_USERNAME
-                      value: "rhpam"
-                    - name: RHPAM_PASSWORD
-                      value: "[[$.AdminPassword]]"
-                    - name: RHPAM_SERVICE_HOST
-                      value: "[[.KieName]]-mysql"
-                    - name: RHPAM_SERVICE_PORT
-                      value: "3306"
-                    ## MySQL driver settings END
-                    - name: TIMER_SERVICE_DATA_STORE_REFRESH_INTERVAL
-                      value: "60000"
-  ## KIE server deployment config END
-  #[[end]]
-  ## RANGE ends
-## KIE Servers END
