--- a/config/envs/rhpam-production-immutable.yaml
+++ b/config/envs/rhpam-production-immutable.yaml
@@ -6,37 +6,54 @@ smartRouter:
 servers:
   ## RANGE BEGINS
   #[[ range $index, $Map := .Servers ]]
-  ## PostgreSQL persistent volume claim BEGIN
-  - persistentVolumeClaims:
+## KIE server deployment config BEGIN
+  - deploymentConfigs:
       - metadata:
-          name: "[[.KieName]][[.KieIndex]]-postgresql-claim"
+          name: "[[.KieName]]"
           labels:
             app: "[[$.ApplicationName]]"
             application: "[[$.ApplicationName]]"
-            service: "[[.KieName]][[.KieIndex]]-postgresql"
+            service: "[[.KieName]]"
         spec:
-          accessModes:
-            - ReadWriteOnce
-          resources:
-            requests:
-              storage: "1Gi"
-    ## PostgreSQL persistent volume claim END
+          template:
+            spec:
+              containers:
+                - name: "[[.KieName]]"
+                  image: "[[.KieName]]"
+                  env:
+                    - name: KIE_SERVER_CONTAINER_DEPLOYMENT
+                      value: "[[.Build.KieServerContainerDeployment]]"
+                    - name: KIE_SERVER_MGMT_DISABLED
+                      value: "true"
+                    - name: KIE_SERVER_STARTUP_STRATEGY
+                      value: LocalContainersStartupStrategy
+                    - name: "[[$.MavenRepo]]_MAVEN_REPO_USERNAME"
+                      value: ""
+                    - name: "[[$.MavenRepo]]_MAVEN_REPO_PASSWORD"
+                      value: ""
+                    - name: "[[$.MavenRepo]]_MAVEN_REPO_SERVICE"
+                      value: ""
+                    - name: MAVEN_REPOS
+                      value: "EXTERNAL"
+                    - name: KIE_SERVER_ROUTER_PROTOCOL
+                      value: "http"
+      ## KIE server deployment config END
     ## KIE server build config BEGIN
     #[[if .Build.KieServerContainerDeployment]]
     imageStreams:
       - metadata:
-          name: "[[.KieName]][[.KieIndex]]"
+          name: "[[.KieName]]"
           labels:
             app: "[[$.ApplicationName]]"
             application: "[[$.ApplicationName]]"
-            service: "[[.KieName]][[.KieIndex]]"
+            service: "[[.KieName]]"
     buildConfigs:
       - metadata:
-          name: "[[.KieName]][[.KieIndex]]"
+          name: "[[.KieName]]"
           labels:
             app: "[[$.ApplicationName]]"
             application: "[[$.ApplicationName]]"
-            service: "[[.KieName]][[.KieIndex]]"
+            service: "[[.KieName]]"
         spec:
           source:
             type: Git
@@ -62,7 +79,7 @@ servers:
           output:
             to:
               kind: ImageStreamTag
-              name: "[[.KieName]][[.KieIndex]]:latest"
+              name: "[[.KieName]]:latest"
           triggers:
             - type: GitHub
               github:
@@ -75,150 +92,6 @@ servers:
             - type: ConfigChange
     #[[end]]
     ## KIE server build config END
-    ## KIE server deployment config BEGIN
-    deploymentConfigs:
-      - metadata:
-          name: "[[.KieName]][[.KieIndex]]"
-          labels:
-            app: "[[$.ApplicationName]]"
-            application: "[[$.ApplicationName]]"
-            service: "[[.KieName]][[.KieIndex]]"
-        spec:
-          template:
-            spec:
-              containers:
-                - name: "[[.KieName]][[.KieIndex]]"
-                  image: "[[.KieName]][[.KieIndex]]"
-                  env:
-                    - name: KIE_SERVER_CONTAINER_DEPLOYMENT
-                      value: "[[.Build.KieServerContainerDeployment]]"
-                    - name: KIE_SERVER_MGMT_DISABLED
-                      value: "true"
-                    - name: KIE_SERVER_STARTUP_STRATEGY
-                      value: LocalContainersStartupStrategy
-                    - name: "[[$.MavenRepo]]_MAVEN_REPO_USERNAME"
-                      value: ""
-                    - name: "[[$.MavenRepo]]_MAVEN_REPO_PASSWORD"
-                      value: ""
-                    - name: "[[$.MavenRepo]]_MAVEN_REPO_SERVICE"
-                      value: ""
-                    - name: MAVEN_REPOS
-                      value: "EXTERNAL"
-                    - name: KIE_SERVER_ROUTER_PROTOCOL
-                      value: "http"
-                    - name: DATASOURCES
-                      value: "RHPAM"
-                    - name: RHPAM_DATABASE
-                      value: "rhpam7"
-                    - name: RHPAM_JNDI
-                      value: "java:/jboss/datasources/rhpam"
-                    - name: RHPAM_JTA
-                      value: "true"
-                    - name: KIE_SERVER_PERSISTENCE_DS
-                      value: "java:/jboss/datasources/rhpam"
-                    ## PostgreSQL driver settings BEGIN
-                    - name: RHPAM_DRIVER
-                      value: "postgresql"
-                    - name: KIE_SERVER_PERSISTENCE_DIALECT
-                      value: "org.hibernate.dialect.PostgreSQLDialect"
-                    - name: RHPAM_USERNAME
-                      value: "rhpam"
-                    - name: RHPAM_PASSWORD
-                      value: "[[$.AdminPassword]]"
-                    - name: RHPAM_SERVICE_HOST
-                      value: "[[.KieName]][[.KieIndex]]-postgresql"
-                    - name: RHPAM_SERVICE_PORT
-                      value: "5432"
-                    - name: TIMER_SERVICE_DATA_STORE_REFRESH_INTERVAL
-                      value: "30000"
-                    ## PostgreSQL driver settings END
-      ## KIE server deployment config END
-      ## PostgreSQL deployment config BEGIN
-      - metadata:
-          name: "[[.KieName]][[.KieIndex]]-postgresql"
-          labels:
-            app: "[[$.ApplicationName]]"
-            application: "[[$.ApplicationName]]"
-            service: "[[.KieName]][[.KieIndex]]-postgresql"
-        spec:
-          strategy:
-            type: Recreate
-          triggers:
-            - type: ImageChange
-              imageChangeParams:
-                automatic: true
-                containerNames:
-                  - "[[.KieName]]-postgresql"
-                from:
-                  kind: ImageStreamTag
-                  namespace: "openshift"
-                  name: "postgresql:10"
-            - type: ConfigChange
-          replicas: 1
-          selector:
-            deploymentConfig: "[[.KieName]][[.KieIndex]]-postgresql"
-          template:
-            metadata:
-              name: "[[.KieName]][[.KieIndex]]-postgresql"
-              labels:
-                deploymentConfig: "[[.KieName]][[.KieIndex]]-postgresql"
-                app: "[[$.ApplicationName]]"
-                application: "[[$.ApplicationName]]"
-                service: "[[.KieName]][[.KieIndex]]-postgresql"
-            spec:
-              containers:
-                - name: "[[.KieName]]-postgresql"
-                  image: postgresql
-                  imagePullPolicy: IfNotPresent
-                  livenessProbe:
-                    exec:
-                      command:
-                        - "/usr/libexec/check-container"
-                        - "--live"
-                    initialDelaySeconds: 120
-                    timeoutSeconds: 10
-                  readinessProbe:
-                    exec:
-                      command:
-                        - "/usr/libexec/check-container"
-                    initialDelaySeconds: 5
-                    timeoutSeconds: 1
-                  ports:
-                    - containerPort: 5432
-                      protocol: TCP
-                  volumeMounts:
-                    - mountPath: "/var/lib/pgsql/data"
-                      name: "[[.KieName]]-postgresql-pvol"
-                  env:
-                    - name: POSTGRESQL_USER
-                      value: "rhpam"
-                    - name: POSTGRESQL_PASSWORD
-                      value: "[[$.AdminPassword]]"
-                    - name: POSTGRESQL_DATABASE
-                      value: "rhpam7"
-                    - name: POSTGRESQL_MAX_PREPARED_TRANSACTIONS
-                      value: "100"
-              volumes:
-                - name: "[[.KieName]]-postgresql-pvol"
-                  persistentVolumeClaim:
-                    claimName: "[[.KieName]][[.KieIndex]]-postgresql-claim"
-    ## PostgreSQL deployment config END
-    services:
-      ## PostgreSQL service BEGIN
-      - metadata:
-          annotations:
-            description: The database server's port.
-          labels:
-            application: prod
-            service: "[[.KieName]][[.KieIndex]]-postgresql"
-          name: "[[.KieName]][[.KieIndex]]-postgresql"
-        spec:
-          ports:
-            - port: 5432
-              targetPort: 5432
-          selector:
-            deploymentConfig: "[[.KieName]][[.KieIndex]]-postgresql"
-    ## PostgreSQL service END
 #[[end]]
 ## RANGE ends
 ## KIE Servers END
