--- a/config/envs/rhpam-production.yaml
+++ b/config/envs/rhpam-production.yaml
@@ -17,35 +17,19 @@ console:
 servers:
   ## RANGE BEGINS
   #[[ range $index, $Map := .Servers ]]
-  ## PostgreSQL persistent volume claim BEGIN
-  - persistentVolumeClaims:
-      - metadata:
-          name: "[[.KieName]][[.KieIndex]]-postgresql-claim"
-          labels:
-            app: "[[$.ApplicationName]]"
-            application: "[[$.ApplicationName]]"
-            service: "[[.KieName]][[.KieIndex]]-postgresql"
-        spec:
-          accessModes:
-            - ReadWriteOnce
-          resources:
-            requests:
-              storage: "1Gi"
-
-    ## PostgreSQL persistent volume claim END
     ## KIE server deployment config BEGIN
-    deploymentConfigs:
+  - deploymentConfigs:
       - metadata:
-          name: "[[.KieName]][[.KieIndex]]"
+          name: "[[.KieName]]"
           labels:
             app: "[[$.ApplicationName]]"
             application: "[[$.ApplicationName]]"
-            service: "[[.KieName]][[.KieIndex]]"
+            service: "[[.KieName]]"
         spec:
           template:
             spec:
               containers:
-                - name: "[[.KieName]][[.KieIndex]]"
+                - name: "[[.KieName]]"
                   env:
                     - name: EXTERNAL_MAVEN_REPO_ID
                       value: ""
@@ -63,119 +47,7 @@ servers:
                       value: "9000"
                     - name: KIE_SERVER_ROUTER_PROTOCOL
                       value: "http"
-                    - name: DATASOURCES
-                      value: "RHPAM"
-                    - name: RHPAM_DATABASE
-                      value: "rhpam7"
-                    - name: RHPAM_JNDI
-                      value: "java:/jboss/datasources/rhpam"
-                    - name: RHPAM_JTA
-                      value: "true"
-                    - name: KIE_SERVER_PERSISTENCE_DS
-                      value: "java:/jboss/datasources/rhpam"
-                    ## PostgreSQL driver settings BEGIN
-                    - name: RHPAM_DRIVER
-                      value: "postgresql"
-                    - name: KIE_SERVER_PERSISTENCE_DIALECT
-                      value: "org.hibernate.dialect.PostgreSQLDialect"
-                    - name: RHPAM_USERNAME
-                      value: "rhpam"
-                    - name: RHPAM_PASSWORD
-                      value: "[[$.AdminPassword]]"
-                    - name: RHPAM_SERVICE_HOST
-                      value: "[[.KieName]][[.KieIndex]]-postgresql"
-                    - name: RHPAM_SERVICE_PORT
-                      value: "5432"
-                    - name: TIMER_SERVICE_DATA_STORE_REFRESH_INTERVAL
-                      value: "30000"
-                    ## PostgreSQL driver settings END
       ## KIE server deployment config END
-      ## PostgreSQL deployment config BEGIN
-      - metadata:
-          name: "[[.KieName]][[.KieIndex]]-postgresql"
-          labels:
-            app: "[[$.ApplicationName]]"
-            application: "[[$.ApplicationName]]"
-            service: "[[.KieName]][[.KieIndex]]-postgresql"
-        spec:
-          strategy:
-            type: Recreate
-          triggers:
-            - type: ImageChange
-              imageChangeParams:
-                automatic: true
-                containerNames:
-                  - "[[.KieName]]-postgresql"
-                from:
-                  kind: ImageStreamTag
-                  namespace: "openshift"
-                  name: "postgresql:10"
-            - type: ConfigChange
-          replicas: 1
-          selector:
-            deploymentConfig: "[[.KieName]][[.KieIndex]]-postgresql"
-          template:
-            metadata:
-              name: "[[.KieName]][[.KieIndex]]-postgresql"
-              labels:
-                deploymentConfig: "[[.KieName]][[.KieIndex]]-postgresql"
-                app: "[[$.ApplicationName]]"
-                application: "[[$.ApplicationName]]"
-                service: "[[.KieName]][[.KieIndex]]-postgresql"
-            spec:
-              containers:
-                - name: "[[.KieName]]-postgresql"
-                  image: postgresql
-                  imagePullPolicy: IfNotPresent
-                  livenessProbe:
-                    exec:
-                      command:
-                        - "/usr/libexec/check-container"
-                        - "--live"
-                    initialDelaySeconds: 120
-                    timeoutSeconds: 10
-                  readinessProbe:
-                    exec:
-                      command:
-                        - "/usr/libexec/check-container"
-                    initialDelaySeconds: 5
-                    timeoutSeconds: 1
-                  ports:
-                    - containerPort: 5432
-                      protocol: TCP
-                  volumeMounts:
-                    - mountPath: "/var/lib/pgsql/data"
-                      name: "[[.KieName]]-postgresql-pvol"
-                  env:
-                    - name: POSTGRESQL_USER
-                      value: "rhpam"
-                    - name: POSTGRESQL_PASSWORD
-                      value: "[[$.AdminPassword]]"
-                    - name: POSTGRESQL_DATABASE
-                      value: "rhpam7"
-                    - name: POSTGRESQL_MAX_PREPARED_TRANSACTIONS
-                      value: "100"
-              volumes:
-                - name: "[[.KieName]]-postgresql-pvol"
-                  persistentVolumeClaim:
-                    claimName: "[[.KieName]][[.KieIndex]]-postgresql-claim"
-    ## PostgreSQL deployment config END
-    services:
-      ## PostgreSQL service BEGIN
-      - metadata:
-          annotations:
-            description: The database server's port.
-          labels:
-            application: prod
-            service: "[[.KieName]][[.KieIndex]]-postgresql"
-          name: "[[.KieName]][[.KieIndex]]-postgresql"
-        spec:
-          ports:
-            - port: 5432
-              targetPort: 5432
-          selector:
-            deploymentConfig: "[[.KieName]][[.KieIndex]]-postgresql"
-    ## PostgreSQL service END
   #[[end]]
   ## RANGE ends
   ## KIE Servers END
