--- a/config/envs/rhpam-trial.yaml
+++ b/config/envs/rhpam-trial.yaml
@@ -54,43 +54,17 @@ servers:
   - deploymentConfigs:
       ## KIE server deployment config BEGIN
       - metadata:
-          name: "[[.KieName]][[.KieIndex]]"
+          name: "[[.KieName]]"
         spec:
           template:
             metadata:
-              name: "[[.KieName]][[.KieIndex]]"
+              name: "[[.KieName]]"
             spec:
               containers:
-                - name: "[[.KieName]][[.KieIndex]]"
+                - name: "[[.KieName]]"
                   env:
-                    - name: DATASOURCES
-                      value: "RHPAM"
-                    - name: RHPAM_DATABASE
-                      value: "rhpam7"
-                    - name: RHPAM_JNDI
-                      value: "java:/jboss/datasources/rhpam"
-                    - name: RHPAM_JTA
-                      value: "true"
-                    - name: KIE_SERVER_PERSISTENCE_DS
-                      value: "java:/jboss/datasources/rhpam"
-                    ## H2 driver settings BEGIN
-                    - name: RHPAM_DRIVER
-                      value: "h2"
-                    - name: RHPAM_USERNAME
-                      value: "sa"
-                    - name: RHPAM_PASSWORD
-                      value: "[[$.AdminPassword]]"
-                    - name: RHPAM_SERVICE_HOST
-                      value: "dummy_ignored"
-                    - name: RHPAM_SERVICE_PORT
-                      value: "12345"
-                    - name: KIE_SERVER_PERSISTENCE_DIALECT
-                      value: "org.hibernate.dialect.H2Dialect"
-                    - name: RHPAM_XA_CONNECTION_PROPERTY_URL
-                      value: "jdbc:h2:/opt/eap/standalone/data/rhpam"
-                    ## H2 driver settings END
                     - name: KIE_SERVER_ROUTE_NAME
-                      value: "[[.KieName]][[.KieIndex]]-http"
+                      value: "[[.KieName]]-http"
                     - name: KIE_SERVER_PROTOCOL
                     - name: KIE_SERVER_PORT
                     - name: FILTERS
@@ -115,29 +89,22 @@ servers:
                       value: "Access-Control-Max-Age"
                     - name: AC_MAX_AGE_FILTER_RESPONSE_HEADER_VALUE
                       value: "1"
-                  volumeMounts:
-                    - name: "[[.KieName]]-h2-pvol"
-                      mountPath: "/opt/eap/standalone/data"
-              volumes:
-                ## H2 volume settings BEGIN
-                - name: "[[.KieName]]-h2-pvol"
-                  emptyDir: {}
     ## KIE server deployment config END
     ## KIE server route BEGIN
     routes:
-      - id: "[[.KieName]][[.KieIndex]]-http"
+      - id: "[[.KieName]]-http"
         metadata:
-          name: "[[.KieName]][[.KieIndex]]-http"
+          name: "[[.KieName]]-http"
           labels:
             app: "[[$.ApplicationName]]"
             application: "[[$.ApplicationName]]"
-            service: "[[.KieName]][[.KieIndex]]"
+            service: "[[.KieName]]"
           annotations:
             description: Route for KIE server's http service.
             haproxy.router.openshift.io/timeout: 60s
         spec:
           to:
-            name: "[[.KieName]][[.KieIndex]]"
+            name: "[[.KieName]]"
           port:
             targetPort: http
     ## KIE server route END
