add crd validation for commonConfig
Signed-off-by: tchughesiv <tchughesiv@gmail.com>

--- a/deploy/examples/common_config.yaml
+++ b/deploy/examples/common_config.yaml
@@ -10,3 +10,10 @@ spec:
     adminPassword: example
     imageTag: 1.0-stage
     mavenRepo: INTERNAL
+    product: rhpam
+    auth:
+      sso:
+        url: https://rh-sso.example.com
+        realm: rhpam
+        adminUser: admin
+        adminPassword: secret
