--- a/config/envs/rhdm-trial.yaml
+++ b/config/envs/rhdm-trial.yaml
@@ -27,6 +27,10 @@ console:
           - name: git-ssh
             port: 8001
             targetPort: 8001
+    - metadata:
+        name: "[[.ApplicationName]]-[[.Console.Name]]-ping"
+        annotations:
+          delete: "true"
   routes:
     - id: "[[.ApplicationName]]-[[.Console.Name]]-http"
       metadata:
@@ -63,10 +67,9 @@ servers:
               containers:
                 - name: "[[.KieName]]"
                   env:
-                    - name: KIE_SERVER_ROUTE_NAME
-                      value: "[[.KieName]]-http"
-                    - name: KIE_SERVER_PROTOCOL
-                    - name: KIE_SERVER_PORT
+                    - name: JGROUPS_PING_PROTOCOL
+                    - name: OPENSHIFT_DNS_PING_SERVICE_NAME
+                    - name: OPENSHIFT_DNS_PING_SERVICE_PORT
                     - name: FILTERS
                       value: "AC_ALLOW_ORIGIN,AC_ALLOW_METHODS,AC_ALLOW_HEADERS,AC_ALLOW_CREDENTIALS,AC_MAX_AGE"
                     - name: AC_ALLOW_ORIGIN_FILTER_RESPONSE_HEADER_NAME
