--- a/config/envs/rhdm-authoring.yaml
+++ b/config/envs/rhdm-authoring.yaml
@@ -9,6 +9,23 @@ console:
           spec:
             containers:
               - name: "[[.ApplicationName]]-[[.Console.Name]]"
+                env:
+                  - name: MAVEN_MIRROR_URL
+                    value: ""
+                  - name: MAVEN_REPO_ID
+                    value: ""
+                  - name: MAVEN_REPO_URL
+                    value: ""
+                  - name: MAVEN_REPO_USERNAME
+                    value: ""
+                  - name: MAVEN_REPO_PASSWORD
+                    value: ""
+                  - name: JGROUPS_PING_PROTOCOL
+                    value: ""
+                  - name: OPENSHIFT_DNS_PING_SERVICE_NAME
+                    value: ""
+                  - name: OPENSHIFT_DNS_PING_SERVICE_PORT
+                    value: ""
                 ports:
                   - name: git-ssh
                     containerPort: 8001
