[KIECLOUD-155] rhdm authoring-ha fixes
Signed-off-by: tchughesiv <tchughesiv@gmail.com>

--- a/deploy/catalog_resources/community/kiecloud-operator.v1.0.0.clusterserviceversion.yaml
+++ b/deploy/catalog_resources/community/kiecloud-operator.v1.0.0.clusterserviceversion.yaml
@@ -69,6 +69,8 @@ spec:
         resources:
           - kind: DeploymentConfig
             version: apps.openshift.io/v1
+          - kind: StatefulSet
+            version: apps/v1
           - kind: Secret
             version: v1
           - kind: PersistentVolumeClaim
