--- a/deploy/catalog_resources/redhat/businessautomation-operator.v1.0.0.clusterserviceversion.yaml
+++ b/deploy/catalog_resources/redhat/businessautomation-operator.v1.0.0.clusterserviceversion.yaml
@@ -69,6 +69,8 @@ spec:
         resources:
           - kind: DeploymentConfig
             version: apps.openshift.io/v1
+          - kind: StatefulSet
+            version: apps/v1
           - kind: Secret
             version: v1
           - kind: PersistentVolumeClaim
